# augesty

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  index.ts  package-lock.json  package.json  rollup.config.mjs
backend/: Cargo.toml
backend/.sqlx/: query-06f2ded83110b90279d28508ac41d77d2619e4e1994130b9b083d432420ab6df.json  query-1206abbab92062435bb53939ea4c8b05bd82505724a252e1d0c591263036e0de.json  query-13ee6768f9d43cf5ad0997b0a7b139fd0c531fd51b32b0e34df49507d3d9a18c.json  query-28b1801dbe259b7efbd7c50806d52d03824bbe0701e2e2e882381bed11037751.json  query-379a47d5c0d4b4160e765c932ce310a7f191ab17aca3010a0b5239ca827f879f.json  query-4c81d91df728f5dbe9109525b2ab74c98b6998771b229679a9132c8843f509f4.json  query-69b8884e45848244612749d758fbe9b284006bd1098edd5aa12ebb102d310e54.json  query-701b006cd1f1ec1de00dc8db5c12bff21ca2e074334bc827cdf44d9cf1c2bb70.json  query-70209d9c1bfdc27e5a4444efe9ead1e4c8c4586b0e4625d089553a01ca1c046a.json  query-7f0ba4656226026d3c47fe9dd23e894fa85501b884f2fbae5bbbc2163f45dd02.json  query-96bae0f1e1731cfe696c62587bbd5e26a77b41b2425d66dd6810cbfc29be354e.json  query-a0a38722ed85767cd06f0a94dca48d4d4364a8dbfd528918b0f41b3de590f31a.json  query-eb569832656482a3130c7f6fc70b2afb9ab89a362ab75007a03a8724a20249ed.json  query-f489bd1bee3df1ff4bcc06e2694b4f02526d17d2e21f05b278757eb51042bb3c.json  query-fbf4d83d9836cf85d01059e679bcbf7dc463eea0579afacc0267f0f8c33640d3.json
backend/migrations/: 20250710205616_users_and_perms.sql
backend/src/: error.rs  extractors.rs  main.rs  state.rs
backend/src/models/: mod.rs  (+4 more)
(+7 files in other folders)
